--- a/app/assets/stylesheets/origin/css_yvjdhf.css.erb
+++ b/app/assets/stylesheets/origin/css_yvjdhf.css.erb
@@ -271,7 +271,7 @@ fieldset{
   margin-top:33px;
 }
 legend{
-  color:#008375;
+  color:#01dcd9;
   font-weight:bold;
   font-size:1.2em;
   display:block;
@@ -320,7 +320,7 @@ legend{
 }
 .dataTable th{
   text-align:left;
-  background:#008375;
+  background:#01dcd9;
   color:#fff;
 }
 .dataTable th,
@@ -403,7 +403,7 @@ legend{
   outline:none;
 }
 .paging li.active a{
-  background:#008375;
+  background:#01dcd9;
 }
 .tabs ul{
   margin:0;
@@ -419,7 +419,7 @@ legend{
 }
 .tabs li.active a{
   background:#f2f2f2;
-  color:#008375;
+  color:#01dcd9;
 }
 .tabs a{
   display:block;
@@ -484,7 +484,7 @@ legend{
 .ui-tabs .ui-tabs-nav li.ui-tabs-active a,
 .ui-tabs .ui-tabs-nav li.ui-state-disabled a,
 .ui-tabs .ui-tabs-nav li.ui-tabs-loading a{
-  color:#008375;
+  color:#01dcd9;
   background:#f2f2f2;
 }
 .ui-tabs .ui-tabs-nav li a,
@@ -868,7 +868,7 @@ body.show-nav{
   position:absolute;
   width:235px;
   height:100%;
-  background:#008375;
+  background:#01dcd9;
   color:#fff;
   left:0;
   top:0;
@@ -940,17 +940,17 @@ h1{
 h2{
   font-size:1.875em;
   line-height:1.36em;
-  color:#008375;
+  color:#01dcd9;
 }
 h3{
   font-size:1.25em;
   line-height:1.32em;
-  color:#008375;
+  color:#01dcd9;
 }
 h4{
   font-size:1em;
   line-height:2.25em;
-  color:#008375;
+  color:#01dcd9;
 }
 h5,h6{
   font-size:1em;
@@ -970,7 +970,7 @@ em,i{
   font-style:italic;
 }
 a{
-  color:#008375;
+  color:#01dcd9;
   text-decoration:none;
 }
 a:hover{
@@ -981,7 +981,7 @@ a:hover{
   color:#ff9e16;
 }
 .block-list a{
-  color:#008375;
+  color:#01dcd9;
 }
 #tinymce{
   max-width:860px;
@@ -1075,7 +1075,7 @@ blockquote p:last-child{
   text-shadow:none !important;
   box-shadow:none !important;
   font-weight:bold !important;
-  background:#008375 !important;
+  background:#01dcd9 !important;
 }
 #sliding-popup #popup-buttons button:hover{
   background:#ff9e16 !important;
@@ -1164,7 +1164,7 @@ blockquote p:last-child{
   margin:0;
   padding:0;
   list-style:none;
-  background:#008375;
+  background:#01dcd9;
   margin:0 0 1.5em 0;
   padding:0 0 0.6em 0;
   color:#fff;
@@ -1205,7 +1205,7 @@ blockquote p:last-child{
 .sub-nav .menu .leaf a.active,
 .sub-nav .menu .collapsed a.active,
 .sub-nav .menu .expanded a.active{
-  color:#008375;
+  color:#01dcd9;
   background:#b7d2cf;
 }
 .sub-nav .menu .leaf a .menu li,
@@ -1308,7 +1308,7 @@ blockquote p:last-child{
 }
 .tabs ul.primary li a{
   border:none;
-  color:#008375;
+  color:#01dcd9;
   background:none;
 }
 .tabs ul.primary li a:hover{
@@ -1331,7 +1331,7 @@ blockquote p:last-child{
   margin:0;
   font-size:1em;
   line-height:1.5em;
-  color:#008375;
+  color:#01dcd9;
 }
 .pager{
   font-size:16px;
@@ -1390,7 +1390,7 @@ blockquote p:last-child{
   border:none;
   border-radius:0;
   padding:0.7em;
-  background:#008375;
+  background:#01dcd9;
 }
 #nodehierarchy-children-form #edit-submit:hover{
   background:#ff9e16;
@@ -1509,7 +1509,7 @@ blockquote p:last-child{
   transform:skewY(-1.5deg);
   padding:100px 0 80px 0;
   position:relative;
-  color:#008375;
+  color:#01dcd9;
   border-bottom:5px solid;
   overflow:hidden;
   background:#ff9e16;
@@ -1518,7 +1518,7 @@ blockquote p:last-child{
   color:#fff;
 }
 .campaign__panel .campaign__button:hover{
-  background:#008375;
+  background:#01dcd9;
 }
 .campaign__panel .skew{
   -moz-transform:skewY(1.5deg) translate3d(0,0,0);
@@ -1616,8 +1616,8 @@ blockquote p:last-child{
   position:absolute;
   right:30px;
   bottom:0;
-  color:#008375;
-  border-color:#008375;
+  color:#01dcd9;
+  border-color:#01dcd9;
   -moz-border-radius:40px;
   -webkit-border-radius:40px;
   border-radius:40px;
@@ -1627,12 +1627,12 @@ blockquote p:last-child{
   font-size:0.875em;
   line-height:1.71429em;
   font-weight:normal;
-  color:#008375;
+  color:#01dcd9;
   background:rgba(255,255,255,0.3);
   width:80px;
   height:80px;
   padding:24px 5px 5px 5px;
-  border:4px solid #008375;
+  border:4px solid #01dcd9;
   text-transform:uppercase;
 }
 .download__panel .field-label:hover,
@@ -1659,8 +1659,8 @@ blockquote p:last-child{
   position:absolute;
   right:30px;
   bottom:30px;
-  color:#008375;
-  border-color:#008375;
+  color:#01dcd9;
+  border-color:#01dcd9;
 }
 .download__button:hover{
   color:#ff9e16;
@@ -1668,7 +1668,7 @@ blockquote p:last-child{
 }
 .info-social{
   color:#fff;
-  background:#008375;
+  background:#dfdfdf;
   padding:80px 0 50px 0;
   -moz-transform:skewY(-1.5deg) translate3d(0,0,0);
   -ms-transform:skewY(-1.5deg) translate3d(0,0,0);
@@ -1762,7 +1762,7 @@ blockquote p:last-child{
   width:100%;
   padding:60px 0;
   text-align:center;
-  color:#008375;
+  color:#01dcd9;
   -moz-transform:skewY(-1.5deg) translate3d(0,0,0);
   -ms-transform:skewY(-1.5deg) translate3d(0,0,0);
   -o-transform:skewY(-1.5deg) translate3d(0,0,0);
@@ -1863,7 +1863,7 @@ form{
   overflow:hidden;
   padding:1.5em;
   color:#fff;
-  background:#008375;
+  background:#01dcd9;
 }
 form label{
   color:#fff;
@@ -2000,18 +2000,18 @@ textarea{
   text-decoration:none;
 }
 .trademark-search__option a{
-  color:#008375;
+  color:#01dcd9;
 }
 .trademark-search__option.active{
   color:#fff;
-  background:#008375;
+  background:#01dcd9;
 }
 #views-exposed-form-trademark-search-block,
 #views-exposed-form-company-search-block,
 #views-exposed-form-services-search-block{
   margin-bottom:1.5em;
   padding:0;
-  background:#008375;
+  background:#01dcd9;
 }
 #views-exposed-form-trademark-search-block input,
 #views-exposed-form-trademark-search-block select,
@@ -2093,7 +2093,7 @@ textarea{
 }
 .webform-client-form{
   margin-bottom:1.5em;
-  background:#008375;
+  background:#01dcd9;
   overflow:hidden;
 }
 .webform-client-form label{
@@ -2285,7 +2285,7 @@ textarea{
   top:-30px;
   width:100%;
   padding:40px 0 10px 0;
-  color:#008375;
+  color:#01dcd9;
   background:#fff;
   -moz-transform:skewY(-0.5deg) translate3d(0,0,0);
   -ms-transform:skewY(-0.5deg) translate3d(0,0,0);
@@ -2386,7 +2386,7 @@ textarea{
   -o-transform:skewY(0.5deg) translate3d(0,0,0);
   -webkit-transform:skewY(0.5deg) translate3d(0,0,0);
   transform:skewY(0.5deg) translate3d(0,0,0);
-  background:#008375;
+  background:#01dcd9;
 }
 .hero .container{
   z-index:1;
@@ -2441,7 +2441,7 @@ textarea{
   line-height:1.5em;
 }
 .hero__button:hover{
-  background:#008375;
+  background:#01dcd9;
 }
 .flexslider .slides{
   padding-top:90px;
@@ -2469,14 +2469,14 @@ textarea{
   font-size:5em;
   line-height:0.9em;
   margin-bottom:0.3em;
-  color:#008375;
+  color:#01dcd9;
 }
 .try-it__title a{
   font-family:"Museo Slab 700",Helvetica,Arial,sans-serif;
 }
 .try-it__button{
-  color:#008375;
-  border-color:#008375;
+  color:#01dcd9;
+  border-color:#01dcd9;
   margin-bottom:58px;
 }
 .try-it__button:hover{
@@ -2487,7 +2487,7 @@ textarea{
   padding-top:6px;
 }
 .quick-search__button:hover{
-  background:#008375;
+  background:#01dcd9;
 }
 .take-action{
   -moz-transform:skewY(-0.5deg) translate3d(0,0,0);
@@ -2545,7 +2545,7 @@ textarea{
   color:#fff;
 }
 .take-action__button:hover{
-  background:#008375;
+  background:#01dcd9;
 }
 .volunteer-sign-up{
   font-size:0.875em;
@@ -2591,8 +2591,8 @@ textarea{
   vertical-align:top;
 }
 .make-it-official__button{
-  color:#008375;
-  border-color:#008375;
+  color:#01dcd9;
+  border-color:#01dcd9;
   font-size:0.8125em;
   line-height:1.84615em;
 }
@@ -2698,7 +2698,7 @@ textarea{
 .block-list__excerpt .more-link{
   margin-left:6px;
   font-weight:bold;
-  color:#008375;
+  color:#01dcd9;
 }
 .block-list__excerpt img{
   display:none;
@@ -2800,14 +2800,14 @@ textarea{
   color:#fff;
 }
 .news__paging{
-  color:#008375;
-  border-color:#008375;
+  color:#01dcd9;
+  border-color:#01dcd9;
   float:right;
   margin-left:1.5em;
 }
 .news__paging--small{
-  color:#008375;
-  border-color:#008375;
+  color:#01dcd9;
+  border-color:#01dcd9;
   font-size:0.75em;
   line-height:2em;
   height:60px;
@@ -2972,7 +2972,7 @@ textarea{
 .search-form{
   position:relative;
   margin-bottom:1.5em;
-  background:#008375;
+  background:#01dcd9;
   overflow:hidden;
 }
 .search-form label{
@@ -3070,7 +3070,7 @@ textarea{
   background:#eff0ea;
 }
 .service-search-result__title{
-  color:#008375;
+  color:#01dcd9;
   font-family:Helvetica,Arial,sans-serif;
   font-size:1.5em;
 }
@@ -3082,7 +3082,7 @@ textarea{
   font-weight:normal;
   font-size:24px;
   line-height:1.5em;
-  color:#008375;
+  color:#01dcd9;
 }
 .uc-price{
   font-family:"Museo Sans 700",Helvetica,Arial,sans-serif;
@@ -3101,17 +3101,17 @@ textarea{
   background:none;
 }
 .add-to-cart label{
-  color:#008375;
+  color:#01dcd9;
 }
 .add-to-cart label .form-required{
-  color:#008375;
+  color:#01dcd9;
 }
 .add-to-cart .field-prefix{
-  color:#008375;
+  color:#01dcd9;
 }
 .add-to-cart .form-item input{
   color:#fff;
-  background:url('/sites/all/themes/the_vegan_society/assets/images/rgbapng/00837599-5.png?1407917704');
+  background:url('/sites/all/themes/the_vegan_society/assets/images/rgbapng/01dcd999-5.png?1407917704');
   background:rgba(0,131,117,0.6);
 }
 .add-to-cart .form-type-uc-quantity input{
@@ -3131,7 +3131,7 @@ textarea{
   background:#eff0ea;
 }
 .add-to-cart .form-radios .message{
-  color:#008375;
+  color:#01dcd9;
 }
 .add-to-cart .form-radios .form-item{
   margin:0;
@@ -3147,7 +3147,7 @@ textarea{
 .attribute select{
   max-width:500px;
   color:#fff;
-  background:url('/sites/all/themes/the_vegan_society/assets/images/rgbapng/00837599-5.png?1407917704');
+  background:url('/sites/all/themes/the_vegan_society/assets/images/rgbapng/01dcd999-5.png?1407917704');
   background:rgba(0,131,117,0.6);
 }
 .attribute option{
@@ -3155,7 +3155,7 @@ textarea{
 }
 .attribute .form-text{
   color:#fff;
-  background:url('/sites/all/themes/the_vegan_society/assets/images/rgbapng/00837599-5.png?1407917704');
+  background:url('/sites/all/themes/the_vegan_society/assets/images/rgbapng/01dcd999-5.png?1407917704');
   background:rgba(0,131,117,0.6);
 }
 .node-product .field-item{
@@ -3283,7 +3283,7 @@ textarea{
   overflow:hidden;
   margin-bottom:1.5em;
   color:#fff;
-  background:#008375;
+  background:#01dcd9;
 }
 #uc-cart-view-form .uc-price{
   font-family:Helvetica,Arial,sans-serif;
@@ -3308,7 +3308,7 @@ textarea{
 }
 #uc-cart-view-form .sticky-enabled.tableheader-processed.sticky-table tbody tr{
   border:none !important;
-  background:#008375;
+  background:#01dcd9;
 }
 #uc-cart-view-form .sticky-enabled.tableheader-processed.sticky-table th{
   padding:0.5em 0.5em 1em;
@@ -3369,7 +3369,7 @@ textarea{
   text-transform:capitalize;
   font-size:1em;
   line-height:1.5em;
-  background:#008375;
+  background:#01dcd9;
 }
 #edit-actions .node-add-to-cart:hover{
   background:#ff9e16;
@@ -3435,7 +3435,7 @@ textarea{
 .uc-cart-checkout-form{
   margin-bottom:1.5em;
   padding:0;
-  color:#008375;
+  color:#01dcd9;
   background:none;
 }
 #uc-cart-checkout-form .fieldset-description,
@@ -3473,7 +3473,7 @@ textarea{
 .uc-cart-checkout-form #edit-cancel{
   float:right;
   padding:10px;
-  color:#008375 !important;
+  color:#01dcd9 !important;
   background:none !important;
 }
 #uc-cart-checkout-form #edit-cancel:hover,
@@ -3488,7 +3488,7 @@ textarea{
   padding:0.75em;
   margin-left:1.5em;
   color:#fff;
-  background:#008375;
+  background:#01dcd9;
 }
 #uc-cart-checkout-form #edit-continue:hover,
 #uc-cart-checkout-form--2 #edit-continue:hover,
@@ -3514,7 +3514,7 @@ textarea{
   line-height:1.71429em;
   text-transform:uppercase;
   color:#fff;
-  background:#008375;
+  background:#01dcd9;
   width:auto;
   height:auto;
   padding:0.5em;
@@ -3603,7 +3603,7 @@ textarea{
   position:relative;
   margin-bottom:1.5em;
   padding:4.5em 1.5em 1.5em;
-  color:#008375;
+  color:#01dcd9;
   background:#eff0ea;
 }
 #cart-pane label,
@@ -3624,7 +3624,7 @@ textarea{
 #coupon_automatic-pane .form-required,
 #coupon-pane label,
 #coupon-pane .form-required{
-  color:#008375;
+  color:#01dcd9;
 }
 #cart-pane .odd,
 #cart-pane .even,
@@ -3735,7 +3735,7 @@ textarea{
   font-size:1em;
   line-height:1.5em;
   color:#fff;
-  background:#008375;
+  background:#01dcd9;
 }
 .order-review-table a{
   color:#fff;
@@ -3777,7 +3777,7 @@ textarea{
   height:auto;
   width:auto;
   padding:0.75em;
-  background:#008375;
+  background:#01dcd9;
   font-weight:bold;
   font-size:0.875em;
   line-height:1.71429em;
@@ -3796,7 +3796,7 @@ textarea{
   background:none;
   border:none;
   border-radius:none;
-  color:#008375;
+  color:#01dcd9;
   font-weight:bold;
   font-size:0.875em;
   line-height:1.71429em;
