--- a/app/assets/stylesheets/new.css.erb
+++ b/app/assets/stylesheets/new.css.erb
@@ -44,7 +44,7 @@
 .news_link{ width: 25%; float: left; text-align: center; margin-bottom: 10px; background: url('<%= image_url "line.jpg" %>') right 20% no-repeat; background-size: auto 40%;}
 .news_link:last-child{background: none;}
 .news_link p{ margin-bottom: 0;}
-.news_link a{ color: #01dcd9; display: block;}
+.news_link a{ color: #01dcd9; display: block; text-decoration: none;}
 .news_link a:hover{ text-decoration: none; color: #ff9e16;}
 .news_link span{ font-size: 136px; color: #01dcd9;}
 .news_link a:hover span{ color: #ff9e16;}
