--- a/app/assets/stylesheets/origin/css_yvjdhf.css.erb
+++ b/app/assets/stylesheets/origin/css_yvjdhf.css.erb
@@ -1668,7 +1668,7 @@ blockquote p:last-child{
 }
 .info-social{
   color:#fff;
-  background:#dfdfdf;
+  background:#d6d6d6;
   padding:80px 0 50px 0;
   -moz-transform:skewY(-1.5deg) translate3d(0,0,0);
   -ms-transform:skewY(-1.5deg) translate3d(0,0,0);
@@ -1944,13 +1944,13 @@ textarea{
 .home-search__panel{
   margin-bottom:58px;
   overflow:hidden;
-  background:#ff9e16;
+  background:#d6d6d6;
 }
 .home-search{
   width:50%;
   padding:30px;
   float:left;
-  background:#ff9e16;
+  background:#d6d6d6;
 }
 .home-search .home-search__title{
   font-size:2.5em;
