--- a/app/assets/stylesheets/new.css.erb
+++ b/app/assets/stylesheets/new.css.erb
@@ -41,7 +41,7 @@
 .news_banner{ text-align:center;}
 .news_banner img{ width: 100%;}
 .news_box{ width: 100%; margin-top: 6%; margin-bottom: 10%;}
-.news_link{ width: 25%; float: left; text-align: center; margin-bottom: 10px; background: url('<%= image_url "line.jpg" %>') right 20% no-repeat; background-size: auto 40%;}
+.news_link{ width: 25%; float: left; text-align: center; margin-bottom: 10px; background: url('<%= image_url "line.jpg" %>') right 20% no-repeat; background-size: 2px 40%;}
 .news_link:last-child{background: none;}
 .news_link p{ margin-bottom: 0;}
 .news_link a{ color: #01dcd9; display: block; text-decoration: none;}
@@ -62,7 +62,7 @@
 @media (max-width:480px){
 	.news_box{ margin-top: 8%;}
 	.news_banner{padding-top: 30px;}
-	.news_link{ width: 25%; background: url('<%= image_url "line.jpg" %>') right 6% no-repeat; background-size: auto 20%;}
+	.news_link{ width: 25%; background: url('<%= image_url "line.jpg" %>') right 6% no-repeat; background-size: 2px 20%;}
 	.news_link span{ font-size:50px;}
 	.news_link b{ padding-top: 5%; width: 46%;}
 }
