what news banner

--- a/app/views/nodes/whats_news.html.erb
+++ b/app/views/nodes/whats_news.html.erb
@@ -6,7 +6,7 @@
     </div>
     <%= render "header" %>
     <section class="news_page">
-      <div class="container">
+      <div class="image_box">
         <div class="news_banner"><%= image_tag "banner_news.jpg" %></div>
       </div>
     </section>
