--- a/app/assets/stylesheets/origin/css_yvjdhf.css.erb
+++ b/app/assets/stylesheets/origin/css_yvjdhf.css.erb
@@ -790,14 +790,14 @@ html{
 }
 html{
   font-family:Helvetica,Arial,sans-serif;
-  background:#fafbf7;
+  background:#f1f1f1;
   height:100%;
 }
 html.lt-ie8{
   overflow-x:hidden;
 }
 body{
-  background:#fafbf7;
+  background:#f1f1f1;
   color:#666;
 }
 .lt-ie8 body{
@@ -2558,7 +2558,7 @@ textarea{
   -webkit-transform:skewY(0.5deg) translate3d(0,0,0);
   transform:skewY(0.5deg) translate3d(0,0,0);
   padding:70px 0;
-  background:#fafbf7;
+  background:#f1f1f1;
 }
 .make-it-official .skew{
   -moz-transform:skewY(-0.5deg) translate3d(0,0,0);
@@ -2929,7 +2929,7 @@ textarea{
   background:#eff0ea;
 }
 .companies .search-result__button:hover{
-  background:#fafbf7;
+  background:#f1f1f1;
 }
 .companies__filter{
   margin:0;
@@ -3810,7 +3810,7 @@ textarea{
   width:auto;
 }
 .order-review-table .review-button-row{
-  background:#fafbf7;
+  background:#f1f1f1;
 }
 .order-review-table .review-button-row td{
   padding:30px 0 20px 0;
