--- a/app/assets/stylesheets/origin/css_yvjdhf.css.erb
+++ b/app/assets/stylesheets/origin/css_yvjdhf.css.erb
@@ -1788,7 +1788,7 @@ blockquote p:last-child{
 }
 @media only screen and (-webkit-min-device-pixel-ratio:2),only screen and (min--moz-device-pixel-ratio:2),only screen and (-o-min-device-pixel-ratio:2 / 1),only screen and (min-device-pixel-ratio:2),only screen and (min-resolution:192dpi),only screen and (min-resolution:2dppx){
 .site-footer__logo{
-  background:url('/sites/all/themes/the_vegan_society/assets/images/v-logo@2x.png?1400754500') 0 0 no-repeat;
+  background:url('<%= image_url "origin/v-logo@2x.png" %>?1400754500') 0 0 no-repeat;
   background-size:76px 83px;
   width:76px;
   height:83px;
@@ -4141,7 +4141,7 @@ h3{
 .site-logo{
   width:33px;
   height:36px;
-  background:url(/sites/all/themes/the_vegan_society/assets/images/v-logo-small.png) top left no-repeat;
+  background:url('<%= image_url "origin/v-logo-small.png" %>') top left no-repeat;
   background-size:33px 36px;
   margin-top:2px;
 }
@@ -4155,7 +4155,7 @@ h3{
 }
 @media only screen and (max-width:40em) and (-webkit-min-device-pixel-ratio:2),only screen and (max-width:40em) and (min--moz-device-pixel-ratio:2),only screen and (max-width:40em) and (-o-min-device-pixel-ratio:2 / 1),only screen and (max-width:40em) and (min-device-pixel-ratio:2),only screen and (max-width:40em) and (min-resolution:192dpi),only screen and (max-width:40em) and (min-resolution:2dppx){
 .site-logo{
-  background:url('/sites/all/themes/the_vegan_society/assets/images/v-logo-small@2x.png?1400754355') 0 0 no-repeat;
+  background:url('<%= image_url "origin/v-logo-small@2x.png" %>?1400754355') 0 0 no-repeat;
   background-size:33px 36px;
   width:33px;
   height:36px;
