--- a/app/assets/stylesheets/origin/css_pbm0l.css.erb
+++ b/app/assets/stylesheets/origin/css_pbm0l.css.erb
@@ -2,30 +2,30 @@
 #autocomplete{border:1px solid;overflow:hidden;position:absolute;z-index:100;}
 #autocomplete ul{list-style:none;list-style-image:none;margin:0;padding:0;}
 #autocomplete li{background:#fff;color:#000;cursor:default;white-space:pre;zoom:1;}
-html.js input.form-autocomplete{background-image:url(/misc/throbber.gif);background-position:100% 2px;background-repeat:no-repeat;}
+html.js input.form-autocomplete{background-image:url('<%= image_url "origin/throbber.gif" %>');background-position:100% 2px;background-repeat:no-repeat;}
 html.js input.throbbing{background-position:100% -18px;}
 html.js fieldset.collapsed{border-bottom-width:0;border-left-width:0;border-right-width:0;height:1em;}
 html.js fieldset.collapsed .fieldset-wrapper{display:none;}
 fieldset.collapsible{position:relative;}
 fieldset.collapsible .fieldset-legend{display:block;}
 .form-textarea-wrapper textarea{display:block;margin:0;width:100%;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box;}
-.resizable-textarea .grippie{background:#eee url(/misc/grippie.png) no-repeat center 2px;border:1px solid #ddd;border-top-width:0;cursor:s-resize;height:9px;overflow:hidden;}
+.resizable-textarea .grippie{background:#eee url('<%= image_url "origin/grippie.png" %>') no-repeat center 2px;border:1px solid #ddd;border-top-width:0;cursor:s-resize;height:9px;overflow:hidden;}
 body.drag{cursor:move;}
 .draggable a.tabledrag-handle{cursor:move;float:left;height:1.7em;margin-left:-1em;overflow:hidden;text-decoration:none;}
 a.tabledrag-handle:hover{text-decoration:none;}
-a.tabledrag-handle .handle{background:url(/misc/draggable.png) no-repeat 6px 9px;height:13px;margin:-0.4em 0.5em;padding:0.42em 0.5em;width:13px;}
+a.tabledrag-handle .handle{background:url('<%= image_url "origin/draggable.png" %>') no-repeat 6px 9px;height:13px;margin:-0.4em 0.5em;padding:0.42em 0.5em;width:13px;}
 a.tabledrag-handle-hover .handle{background-position:6px -11px;}
 div.indentation{float:left;height:1.7em;margin:-0.4em 0.2em -0.4em -0.4em;padding:0.42em 0 0.42em 0.6em;width:20px;}
-div.tree-child{background:url(/misc/tree.png) no-repeat 11px center;}
-div.tree-child-last{background:url(/misc/tree-bottom.png) no-repeat 11px center;}
-div.tree-child-horizontal{background:url(/misc/tree.png) no-repeat -11px center;}
+div.tree-child{background:url('<%= image_url "origin/tree.png" %>') no-repeat 11px center;}
+div.tree-child-last{background:url('<%= image_url "origin/tree-bottom.png" %>') no-repeat 11px center;}
+div.tree-child-horizontal{background:url('<%= image_url "origin/tree.png" %>') no-repeat -11px center;}
 .tabledrag-toggle-weight-wrapper{text-align:right;}
 table.sticky-header{background-color:#fff;margin-top:0;}
 .progress .bar{background-color:#fff;border:1px solid;}
 .progress .filled{background-color:#000;height:1.5em;width:5px;}
 .progress .percentage{float:right;}
 .ajax-progress{display:inline-block;}
-.ajax-progress .throbber{background:transparent url(/misc/throbber.gif) no-repeat 0px -18px;float:left;height:15px;margin:2px;width:15px;}
+.ajax-progress .throbber{background:transparent url('<%= image_url "origin/throbber.gif" %>') no-repeat 0px -18px;float:left;height:15px;margin:2px;width:15px;}
 .ajax-progress .message{padding-left:20px;}
 tr .ajax-progress .throbber{margin:0 2px;}
 .ajax-progress-bar{width:16em;}
@@ -70,17 +70,17 @@ ul.secondary a{padding:0;text-decoration:none;}
 ul.secondary a.active{border-bottom:4px solid #999;}
 
 div.messages{background-position:8px 8px;background-repeat:no-repeat;border:1px solid;margin:6px 0;padding:10px 10px 10px 50px;}
-div.status{background-image:url(/misc/message-24-ok.png);border-color:#be7;}
+div.status{background-image:url('<%= image_url "origin/message-24-ok.png" %>');border-color:#be7;}
 div.status,
 .ok{color:#234600;}
 div.status,
 table tr.ok{background-color:#f8fff0;}
-div.warning{background-image:url(/misc/message-24-warning.png);border-color:#ed5;}
+div.warning{background-image:url('<%= image_url "origin/message-24-warning.png" %>');border-color:#ed5;}
 div.warning,
 .warning{color:#840;}
 div.warning,
 table tr.warning{background-color:#fffce5;}
-div.error{background-image:url(/misc/message-24-error.png);border-color:#ed541d;}
+div.error{background-image:url('<%= image_url "origin/message-24-error.png" %>');border-color:#ed541d;}
 div.error,
 .error{color:#8c2e0b;}
 div.error,
@@ -125,13 +125,13 @@ input.form-radio{vertical-align:middle;}
 .container-inline.form-actions{margin-top:0;margin-bottom:0;}
 .more-link{text-align:right;}
 .more-help-link{text-align:right;}
-.more-help-link a{background:url(/misc/help.png) 0 50% no-repeat;padding:1px 0 1px 20px;}
+.more-help-link a{background:url('<%= image_url "origin/help.png" %>') 0 50% no-repeat;padding:1px 0 1px 20px;}
 .item-list .pager{clear:both;text-align:center;}
 .item-list .pager li{background-image:none;display:inline;list-style-type:none;padding:0.5em;}
 .pager-current{font-weight:bold;}
 #autocomplete li.selected{background:#0072b9;color:#fff;}
-html.js fieldset.collapsible .fieldset-legend{background:url(/misc/menu-expanded.png) 5px 65% no-repeat;padding-left:15px;}
-html.js fieldset.collapsed .fieldset-legend{background-image:url(/misc/menu-collapsed.png);background-position:5px 50%;}
+html.js fieldset.collapsible .fieldset-legend{background:url('<%= image_url "origin/menu-expanded.png" %>') 5px 65% no-repeat;padding-left:15px;}
+html.js fieldset.collapsed .fieldset-legend{background-image:url('<%= image_url "origin/menu-collapsed.png" %>');background-position:5px 50%;}
 .fieldset-legend span.summary{color:#999;font-size:0.9em;margin-left:0.5em;}
 tr.drag{background-color:#fffff0;}
 tr.drag-previous{background-color:#ffd;}
@@ -142,5 +142,5 @@ td.checkbox,
 th.checkbox{text-align:center;}
 .progress{font-weight:bold;}
 .progress .bar{background:#ccc;border-color:#666;margin:0 0.2em;-moz-border-radius:3px;-webkit-border-radius:3px;border-radius:3px;}
-.progress .filled{background:#0072b9 url(/misc/progress.gif);}
+.progress .filled{background:#0072b9 url('<%= image_url "origin/progress.gif" %>');}
 
