--- a/app/assets/stylesheets/origin/css_yvjdhf.css.erb
+++ b/app/assets/stylesheets/origin/css_yvjdhf.css.erb
@@ -430,7 +430,7 @@ legend{
   -moz-border-radius-topright:5px;
   -webkit-border-top-right-radius:5px;
   border-top-right-radius:5px;
-  background:url('/sites/all/themes/the_vegan_society/assets/images/rgbapng/ffffff7f-5.png?1407917703');
+  background:url('<%= image_url "origin/ffffff7f-5.png" %>?1407917703');
   background:rgba(255,255,255,0.5);
   line-height:1;
   text-decoration:none;
@@ -1222,21 +1222,21 @@ blockquote p:last-child{
   padding:0.5em 1.5em 0.5em 3em;
 }
 .sub-nav .menu .expanded.active-trail{
-  background:url('/sites/all/themes/the_vegan_society/assets/images/rgbapng/ffffff1a-5.png?1407917704');
+  background:url('<%= image_url "origin/ffffff1a-5.png" %>?1407917704');
   background:rgba(255,255,255,0.1);
 }
 .sub-nav .menu .expanded .expanded ul li a{
   padding:0.5em 1.5em 0.5em 4.5em;
 }
 .sub-nav .menu .expanded .expanded.active-trail{
-  background:url('/sites/all/themes/the_vegan_society/assets/images/rgbapng/ffffff33-5.png?1407917704');
+  background:url('<%= image_url "origin/ffffff33-5.png" %>?1407917704');
   background:rgba(255,255,255,0.2);
 }
 .sub-nav .menu .expanded .expanded .expanded ul li a{
   padding:0.5em 1.5em 0.5em 6em;
 }
 .sub-nav .menu .expanded .expanded .expanded.active-trail{
-  background:url('/sites/all/themes/the_vegan_society/assets/images/rgbapng/ffffff4d-5.png?1407917704');
+  background:url('<%= image_url "origin/ffffff4d-5.png" %>?1407917704');
   background:rgba(255,255,255,0.3);
 }
 .addthis_toolbox{
@@ -1472,7 +1472,7 @@ blockquote p:last-child{
   font-family:"Museo Sans 700",Helvetica,Arial,sans-serif;
   font-weight:normal;
   color:#fff;
-  background:url('/sites/all/themes/the_vegan_society/assets/images/rgbapng/ffffff4d-5.png?1407917704');
+  background:url('<%= image_url "origin/ffffff4d-5.png" %>?1407917704');
   background:rgba(255,255,255,0.3);
   width:80px;
   height:80px;
@@ -1788,7 +1788,7 @@ blockquote p:last-child{
 }
 @media only screen and (-webkit-min-device-pixel-ratio:2),only screen and (min--moz-device-pixel-ratio:2),only screen and (-o-min-device-pixel-ratio:2 / 1),only screen and (min-device-pixel-ratio:2),only screen and (min-resolution:192dpi),only screen and (min-resolution:2dppx){
 .site-footer__logo{
-  background:url('/sites/all/themes/the_vegan_society/assets/images/v-logo@2x.png?1400754500') 0 0 no-repeat;
+  background:url('<%= image_url "origin/v-logo@2x.png" %>?1400754500') 0 0 no-repeat;
   background-size:76px 83px;
   width:76px;
   height:83px;
@@ -1839,7 +1839,7 @@ blockquote p:last-child{
   line-height:1.6em;
   font-weight:bold;
   color:#fff;
-  background:url('/sites/all/themes/the_vegan_society/assets/images/rgbapng/ffffff4d-5.png?1407917704');
+  background:url('<%= image_url "origin/ffffff4d-5.png" %>?1407917704');
   background:rgba(255,255,255,0.3);
   padding:0.75em;
   text-transform:uppercase;
@@ -1929,7 +1929,7 @@ textarea{
   border-radius:0 !important;
   font-family:Helvetica,Arial,sans-serif;
   font-size:16px !important;
-  background:url('/sites/all/themes/the_vegan_society/assets/images/rgbapng/ffffff33-5.png?1407917704');
+  background:url('<%= image_url "origin/ffffff33-5.png" %>?1407917704');
   background:rgba(255,255,255,0.2);
 }
 .newsletter-signup .newsletter-signup__input::-webkit-input-placeholder{
@@ -1973,7 +1973,7 @@ textarea{
   width:100%;
   margin:0;
   color:#fff;
-  background:url('/sites/all/themes/the_vegan_society/assets/images/rgbapng/ffffff33-5.png?1407917704');
+  background:url('<%= image_url "origin/ffffff33-5.png" %>?1407917704');
   background:rgba(255,255,255,0.2);
 }
 .home-search .form-item input::-webkit-input-placeholder{
@@ -2020,7 +2020,7 @@ textarea{
 #views-exposed-form-services-search-block input,
 #views-exposed-form-services-search-block select{
   color:#fff;
-  background:url('/sites/all/themes/the_vegan_society/assets/images/rgbapng/ffffff33-5.png?1407917704');
+  background:url('<%= image_url "origin/ffffff33-5.png" %>?1407917704');
   background:rgba(255,255,255,0.2);
 }
 #views-exposed-form-trademark-search-block label,
@@ -2108,7 +2108,7 @@ textarea{
 .webform-client-form select{
   width:60%;
   color:#fff;
-  background:url('/sites/all/themes/the_vegan_society/assets/images/rgbapng/ffffff33-5.png?1407917704');
+  background:url('<%= image_url "origin/ffffff33-5.png" %>?1407917704');
   background:rgba(255,255,255,0.2);
 }
 .webform-client-form select{
@@ -2116,7 +2116,7 @@ textarea{
 }
 .webform-client-form textarea{
   color:#fff;
-  background:url('/sites/all/themes/the_vegan_society/assets/images/rgbapng/ffffff33-5.png?1407917704');
+  background:url('<%= image_url "origin/ffffff33-5.png" %>?1407917704');
   background:rgba(255,255,255,0.2);
 }
 .webform-client-form .description{
@@ -2199,7 +2199,7 @@ textarea{
 #wf-crm-billing-items tr{
   border-bottom:none;
   color:#fff;
-  background:url('/sites/all/themes/the_vegan_society/assets/images/rgbapng/ffffff33-5.png?1407917704');
+  background:url('<%= image_url "origin/ffffff33-5.png" %>?1407917704');
   background:rgba(255,255,255,0.2);
 }
 #wf-crm-billing-items td{
@@ -2311,7 +2311,7 @@ textarea{
 }
 @media only screen and (-webkit-min-device-pixel-ratio:2),only screen and (min--moz-device-pixel-ratio:2),only screen and (-o-min-device-pixel-ratio:2 / 1),only screen and (min-device-pixel-ratio:2),only screen and (min-resolution:192dpi),only screen and (min-resolution:2dppx){
 .site-logo{
-  background:url('/sites/all/themes/the_vegan_society/assets/images/logo@2x.png?1400754033') 0 0 no-repeat;
+  background:url('<%= image_url "origin/logo@2x.png" %>?1400754033') 0 0 no-repeat;
   background-size:245px 85px;
   width:245px;
   height:85px;
@@ -2981,7 +2981,7 @@ textarea{
 }
 .search-form input{
   color:#fff;
-  background:url('/sites/all/themes/the_vegan_society/assets/images/rgbapng/ffffff33-5.png?1407917704');
+  background:url('<%= image_url "origin/ffffff33-5.png" %>?1407917704');
   background:rgba(255,255,255,0.2);
 }
 .search-form .form-item{
@@ -3111,7 +3111,7 @@ textarea{
 }
 .add-to-cart .form-item input{
   color:#fff;
-  background:url('/sites/all/themes/the_vegan_society/assets/images/rgbapng/01dcd999-5.png?1407917704');
+  background:url('<%= image_url "origin/01dcd999-5.png" %>?1407917704');
   background:rgba(0,131,117,0.6);
 }
 .add-to-cart .form-type-uc-quantity input{
@@ -3147,7 +3147,7 @@ textarea{
 .attribute select{
   max-width:500px;
   color:#fff;
-  background:url('/sites/all/themes/the_vegan_society/assets/images/rgbapng/01dcd999-5.png?1407917704');
+  background:url('<%= image_url "origin/01dcd999-5.png" %>?1407917704');
   background:rgba(0,131,117,0.6);
 }
 .attribute option{
@@ -3155,7 +3155,7 @@ textarea{
 }
 .attribute .form-text{
   color:#fff;
-  background:url('/sites/all/themes/the_vegan_society/assets/images/rgbapng/01dcd999-5.png?1407917704');
+  background:url('<%= image_url "origin/01dcd999-5.png" %>?1407917704');
   background:rgba(0,131,117,0.6);
 }
 .node-product .field-item{
@@ -3221,7 +3221,7 @@ textarea{
   text-decoration:none;
   margin-top:26px;
   padding:0.5em !important;
-  background:url('/sites/all/themes/the_vegan_society/assets/images/rgbapng/ffffff4d-5.png?1407917704');
+  background:url('<%= image_url "origin/ffffff4d-5.png" %>?1407917704');
   background:rgba(255,255,255,0.3);
 }
 .sub-nav__cart .cart-block-view-cart a:hover{
@@ -3402,7 +3402,7 @@ textarea{
 }
 .form-type-uc-quantity input{
   color:#fff;
-  background:url('/sites/all/themes/the_vegan_society/assets/images/rgbapng/ffffff33-5.png?1407917704');
+  background:url('<%= image_url "origin/ffffff33-5.png" %>?1407917704');
   background:rgba(255,255,255,0.2);
 }
 #uc-cart-pane-coupon{
@@ -3465,7 +3465,7 @@ textarea{
 .uc-cart-checkout-form select{
   float:left;
   width:60%;
-  background:url('/sites/all/themes/the_vegan_society/assets/images/rgbapng/ffffffcc-5.png?1407917704');
+  background:url('<%= image_url "origin/ffffffcc-5.png" %>?1407917704');
   background:rgba(255,255,255,0.8);
 }
 #uc-cart-checkout-form #edit-cancel,
@@ -3881,7 +3881,7 @@ h3{
 }
 @media only screen and (max-width:1365px) and (-webkit-min-device-pixel-ratio:2),only screen and (max-width:1365px) and (min--moz-device-pixel-ratio:2),only screen and (max-width:1365px) and (-o-min-device-pixel-ratio:2 / 1),only screen and (max-width:1365px) and (min-device-pixel-ratio:2),only screen and (max-width:1365px) and (min-resolution:192dpi),only screen and (max-width:1365px) and (min-resolution:2dppx){
 .site-logo{
-  background:url('/sites/all/themes/the_vegan_society/assets/images/logo@2x.png?1400754033') 0 0 no-repeat;
+  background:url('<%= image_url "origin/logo@2x.png" %>?1400754033') 0 0 no-repeat;
   background-size:178.85px 62.05px;
   width:178.85px;
   height:62.05px;
@@ -3977,7 +3977,7 @@ h3{
   max-width:200px;
   width:200px;
   height:57px;
-  background:url(/sites/all/themes/the_vegan_society/assets/images/logo-no-strapline.png) top left no-repeat;
+  background:url('<%= image_url "origin/logo-no-strapline.png" %>') top left no-repeat;
   background-size:200px 57px;
   margin-top:2px;
 }
@@ -3991,7 +3991,7 @@ h3{
 }
 @media only screen and (max-width:1000px) and (-webkit-min-device-pixel-ratio:2),only screen and (max-width:1000px) and (min--moz-device-pixel-ratio:2),only screen and (max-width:1000px) and (-o-min-device-pixel-ratio:2 / 1),only screen and (max-width:1000px) and (min-device-pixel-ratio:2),only screen and (max-width:1000px) and (min-resolution:192dpi),only screen and (max-width:1000px) and (min-resolution:2dppx){
 .site-logo{
-  background:url('/sites/all/themes/the_vegan_society/assets/images/logo-no-strapline@2x.png?1400754212') 0 0 no-repeat;
+  background:url('<%= image_url "origin/logo-no-strapline@2x.png" %>?1400754212') 0 0 no-repeat;
   background-size:200px 57px;
   width:200px;
   height:57px;
@@ -4141,7 +4141,7 @@ h3{
 .site-logo{
   width:33px;
   height:36px;
-  background:url(/sites/all/themes/the_vegan_society/assets/images/v-logo-small.png) top left no-repeat;
+  background:url('<%= image_url "origin/v-logo-small.png" %>') top left no-repeat;
   background-size:33px 36px;
   margin-top:2px;
 }
@@ -4155,7 +4155,7 @@ h3{
 }
 @media only screen and (max-width:40em) and (-webkit-min-device-pixel-ratio:2),only screen and (max-width:40em) and (min--moz-device-pixel-ratio:2),only screen and (max-width:40em) and (-o-min-device-pixel-ratio:2 / 1),only screen and (max-width:40em) and (min-device-pixel-ratio:2),only screen and (max-width:40em) and (min-resolution:192dpi),only screen and (max-width:40em) and (min-resolution:2dppx){
 .site-logo{
-  background:url('/sites/all/themes/the_vegan_society/assets/images/v-logo-small@2x.png?1400754355') 0 0 no-repeat;
+  background:url('<%= image_url "origin/v-logo-small@2x.png" %>?1400754355') 0 0 no-repeat;
   background-size:33px 36px;
   width:33px;
   height:36px;
@@ -4547,7 +4547,7 @@ form{
 }
 @media only screen and (-webkit-min-device-pixel-ratio:2),only screen and (min--moz-device-pixel-ratio:2),only screen and (-o-min-device-pixel-ratio:2 / 1),only screen and (min-device-pixel-ratio:2),only screen and (min-resolution:192dpi),only screen and (min-resolution:2dppx){
 .logo{
-  background:url('/sites/all/themes/the_vegan_society/assets/images/logo@2x.png?1400754033') 0 0 no-repeat;
+  background:url('<%= image_url "origin/logo@2x.png" %>?1400754033') 0 0 no-repeat;
   background-size:122.5px 42.5px;
   width:122.5px;
   height:42.5px;
