--- a/app/assets/stylesheets/origin/css_yvjdhf.css.erb
+++ b/app/assets/stylesheets/origin/css_yvjdhf.css.erb
@@ -1206,7 +1206,7 @@ blockquote p:last-child{
 .sub-nav .menu .collapsed a.active,
 .sub-nav .menu .expanded a.active{
   color:#01dcd9;
-  background:#b7d2cf;
+  background:#84fdfb;
 }
 .sub-nav .menu .leaf a .menu li,
 .sub-nav .menu .collapsed a .menu li,
