--- a/app/views/nodes/whats_news.html.erb
+++ b/app/views/nodes/whats_news.html.erb
@@ -7,7 +7,7 @@
     <%= render "header" %>
     <section class="news_page">
       <div class="image_box">
-        <div class="news_banner"><%= image_tag "banner_news.jpg" %></div>
+        <div class="news_banner"><%= image_tag "banner_news2.jpg" %></div>
       </div>
     </section>
     <section>
