修复连接错误

--- a/app/views/application/_mobile_nav_list.html.erb
+++ b/app/views/application/_mobile_nav_list.html.erb
@@ -1,5 +1,5 @@
 <div class="mobile-nav-list">
-  <ul class="mobile-site-nav"><li class="menu-1092 first"><a href="/whats-new" title="">What's New?</a></li>
+  <ul class="mobile-site-nav"><li class="menu-1092 first"><a href="/nodes/whats_news" title="">What's New?</a></li>
     <li class="menu-1027"><a href="/try-vegan" title="">Try vegan</a></li>
     <li class="menu-1034"><a href="/take-action" title="">Take action</a></li>
     <li class="menu-1046"><a href="/resources" title="">Resources</a></li>
