--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -14,7 +14,7 @@
 
 
       <div class="user-login">
-        <a href="/user">My Account</a>
+        <a href="/admin">My Account</a>
       </div>
       
       <div class="site-nav">
