--- a/app/assets/stylesheets/new.css.erb
+++ b/app/assets/stylesheets/new.css.erb
@@ -68,6 +68,7 @@
 }
 
 @media (max-width:320px){
+	.news_banner{padding-top: 18%;}
 	.news_link{ width: 25%;background: none;}
 	.news_link b{width: 80%;}
 }
