show.html.erb  images

--- a/app/assets/stylesheets/new.css.erb
+++ b/app/assets/stylesheets/new.css.erb
@@ -38,6 +38,8 @@
 	content: "\e603";
 }
 
+.user-login a,
+.site-nav__item a{ font-family: "Microsoft YaHei";}
 .news_banner{ text-align:center;}
 .news_banner img{ width: 100%;}
 .news_box{ width: 100%; margin-top: 6%; margin-bottom: 10%;}
