--- a/app/views/nodes/show.html.erb
+++ b/app/views/nodes/show.html.erb
@@ -32,7 +32,7 @@
                 <div class="field field-name-body field-type-text-with-summary field-label-hidden">
                   <div class="field-items">
                     <div class="field-item even" property="content:encoded">
-                      <h2>Set yourself free from stereotypes<a href="/sites/default/files/LV_Kiss.jpg" target="_blank"><img src="/sites/default/files/uploads/LV_Kiss_385.jpg" width="320" height="452" style="float: right;" class="right"></a></h2>
+                      <h2>Set yourself free from stereotypes<a href="login/LV_Kiss_385.jpg" target="_blank"><%= image_tag "login/LV_Kiss_385.jpg", width: 320, height: 452, style: "float: right;", class: "right" %></a></h2>
                       <p>You probably know a vegan. Chances are you’ve talked to them already today. Heck, you may even be sitting behind one right now.</p>
                       <p>But you’d never have guessed it. There’s no such thing as a 'typical' vegan. There’s no dress code. No lingo. Just a few hundred thousand people who are choosing to live a good life – their own way.</p>
                       <p>More than that, veganism is actually a protected belief under the Equality Act 2010. So we’re saying our last goodbyes to lettuce sandwiches: a new era of veganism is dawning.</p>
@@ -40,7 +40,7 @@
                       <p>There’s just something about vegan living that really gets you excited, but you can’t quite put your finger on it. Ready to hear the big secret?</p>
                       <blockquote><p>"You don’t have to be vegan to love vegan things"</p>
                       </blockquote>
-                      <p><a href="/sites/default/files/LV_Run.jpg" target="_blank"><img src="/sites/default/files/uploads/LV_Run_385.jpg" width="320" height="452" style="float: left;" class="left"></a>Hundreds of thousands of people already enjoy vegan food, vegan shoes, vegan soap, and vegan pretty much everything. Beginning to replace some non-vegan items with vegan products will see you living your life closer to the values you already hold – and closer to <em>The Vegan Society</em>’s vision of a world in which humans do not exploit other animals. Once you begin, the transition will be a breeze. </p>
+                      <p><a href="login/LV_Run.jpg" target="_blank"><%= image_tag "login/LV_Run_385.jpg", width: 320, height: 452, style: "float: left;", class: "left" %></a>Hundreds of thousands of people already enjoy vegan food, vegan shoes, vegan soap, and vegan pretty much everything. Beginning to replace some non-vegan items with vegan products will see you living your life closer to the values you already hold – and closer to <em>The Vegan Society</em>’s vision of a world in which humans do not exploit other animals. Once you begin, the transition will be a breeze. </p>
 
                       <h2>Where will your choices take you?</h2>
                       <p>Many products you love are vegan already. Isn’t it time you experimented with some new stuff? We know you care about animals, the environment, and your health. The great news is that vegan living is getting easier and easier. Look out for over 16,000 products registered with our <a href="/your-business/trademark-showcase" target="_blank">Vegan Trademark</a> worldwide. See at a glance that the product contains no animal ingredients and has not been tested on animals. What’s not to love?</p>
@@ -48,7 +48,7 @@
                       <p>But if you’re not about to go vegan anytime soon, don’t let that stop you from bringing the vegan products you know and love into your life more regularly. Then, when the time comes to try going vegan for real, you’ll make it look easy.&nbsp;</p>
                       <h2>Already smitten?</h2>
                       <p>Vegans have all the fun. But let’s not keep it to ourselves – we have an entire planet to save.&nbsp;Share the love with everyone you know (hint: by joining our campaign) and help inspire more people to go vegan.&nbsp;</p>
-                      <h2>Join the campaign<a href="/sites/default/files/LV_Eat.jpg" target="_blank"><img src="/sites/default/files/uploads/LV_Eat_385.jpg" width="320" height="452" style="float: right; margin-top: 1px; margin-bottom: 1px;" class="right"></a></h2>
+                      <h2>Join the campaign<a href="/sites/default/files/LV_Eat.jpg" target="_blank"><%= image_tag "login/LV_Run_385.jpg", width: 320, height: 452, style: "float: right;","margin-top: 1px", class: "right" %></a></h2>
                       <p>See these posters? They need sharing far and wide on social media. Already, people have been getting in touch with us to say how much they love to eat vegan food and wear vegan lipstick, and (this is the best bit) <em>how they’ll be thinking more about their shopping choices as a result of this campaign</em>. Ka-ching! That’s what we like to hear.</p>
                       <p>Can you help us to connect with a wider audience? Here’s what we'd love you to do:</p>
                       <ul><li>save your favourite poster from this page (or all of them if you can’t decide!)</li>
@@ -87,7 +87,7 @@
           </div>
           <div class="banner__panel">
             <div class="region region-sidebar-banners">
-              <div id="banner"><a class="link" href="/shop/supplements"><img class="jpg" alt="The Vegan Shop" src="http://www.vegansociety.com/sites/default/files/banners/VEG1_426_new.png"></a>
+              <div id="banner"><a class="link" href="/shop/supplements"><img class="jpg" alt="The Vegan Shop" src="http://www.vegansociety.com/sites/default/files/banners/VEG1_426_new.png"><%= image_tag "login/VEG1_426_new.png", alt:"The Vegan Shop" %></a>
               </div>  
             </div>
           </div>        
