--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -14,18 +14,18 @@
 
 
       <div class="user-login">
-        <a href="/admin">My Account</a>
+        <a href="/admin">我的账户</a>
       </div>
       
       <div class="site-nav">
         <ul class="site-nav__item">
-          <li class="menu-1092 first"><%= link_to "What's New?", whats_news_nodes_path %></li>
-          <li class="menu-1027"><a href="/try-vegan" title="">Try vegan</a></li>
-          <li class="menu-1034"><a href="/take-action" title="">Take action</a></li>
-          <li class="menu-1046"><a href="/resources" title="">Resources</a></li>
-          <li class="menu-1060"><a href="/your-business" title="">Your Business</a></li>
-          <li class="menu-1066"><a href="/society" title="">The Society</a></li>
-          <li class="menu-1150 last"><a href="/shop" title="">Shop</a></li>
+          <li class="menu-1092 first"><%= link_to "什么是新的?", whats_news_nodes_path %></li>
+          <li class="menu-1027"><a href="/try-vegan" title="">尝试素食</a></li>
+          <li class="menu-1034"><a href="/take-action" title="">采取行动</a></li>
+          <li class="menu-1046"><a href="/resources" title="">资源</a></li>
+          <li class="menu-1060"><a href="/your-business" title="">你的业务</a></li>
+          <li class="menu-1066"><a href="/society" title="">社会</a></li>
+          <li class="menu-1150 last"><a href="/shop" title="">商店</a></li>
         </ul>
       </div> <!-- /#main-menu -->
 
